# morris

./: AGENTS.md  Cargo.toml  README.md
.claude/skills/morris/: SKILL.md
src/: main.rs
