[package]
name = "morris"
version = "0.3.0"
edition = "2024"

[[bin]]
name = "cargo-morris"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
